add api and fix blog